--- a/Configurations/config.properties
+++ b/Configurations/config.properties
@@ -1,5 +1,5 @@
 baseUrl = https://leonardo.ai
-baseUrlDebuggerMode = https://app.leonardo.ai/?_gl=1*1q5lbpv*_gcl_au*NzM2NTQ4NjU4LjE3MTgzODI4NzQ.*_ga*OTc4MTA1NjM2LjE3MTgzODI4NzQ.*_ga_9SZY51046C*MTcxODQ0NDgzOS42LjEuMTcxODQ0OTA2MC42MC4wLjA.*_ga_4J9ZXN1KG8*MTcxODQ0MTY4Ny40LjEuMTcxODQ0OTA2MS4zOC4wLjA.
+baseUrlDebuggerMode = https://app.leonardo.ai/?_gl=1*1puk5kh*_gcl_au*NzM2NTQ4NjU4LjE3MTgzODI4NzQ.*_ga*OTc4MTA1NjM2LjE3MTgzODI4NzQ.*_ga_9SZY51046C*MTcxOTc2MzI5Mi4xMi4xLjE3MTk3NjQyNDguNDcuMC4w*_ga_4J9ZXN1KG8*MTcxOTc2MzI5Mi4xMC4xLjE3MTk3NjQyNDguNDcuMC4w
 userEmail = l5344052@gmail.com
 userPassword = Qwer4321!
 chromepath = ./Driver//chromedriver.exe
